Added additional params

--- a/check_properties_chembl.ipynb
+++ b/check_properties_chembl.ipynb
@@ -3,24 +3,25 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:57:02.736063Z",
-     "start_time": "2024-06-07T19:57:02.733361Z"
+     "end_time": "2024-06-08T19:03:07.107405Z",
+     "start_time": "2024-06-08T19:03:07.104302Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from chembl_webresource_client.new_client import new_client\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import json"
    ],
    "id": "fa8bb7a8d601629c",
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 112
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:57:03.234750Z",
-     "start_time": "2024-06-07T19:57:03.230307Z"
+     "end_time": "2024-06-08T19:03:07.114502Z",
+     "start_time": "2024-06-08T19:03:07.110179Z"
     }
    },
    "cell_type": "code",
@@ -130,20 +131,20 @@
        " 'CHEMBL894']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 44
+   "execution_count": 113
   },
   {
    "cell_type": "code",
    "id": "c9c0a382-a0cd-4c47-a3de-d1c2df906fac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T20:01:42.520856Z",
-     "start_time": "2024-06-07T20:01:42.442276Z"
+     "end_time": "2024-06-08T19:03:07.192800Z",
+     "start_time": "2024-06-08T19:03:07.115832Z"
     }
    },
    "source": [
@@ -166,31 +167,36 @@
     "def check_analgesic(molecule):\n",
     "    return 1 if molecule['indication_class'] and 'Analgesic' in molecule['indication_class'] else 0\n",
     "\n",
+    "def get_pka_acid(molecule):\n",
+    "    # structures=molecule['molecule_structures']\n",
+    "    # print(structures)\n",
+    "    # print(structures.get('cx_most_apka'))\n",
+    "    return molecule['molecule_properties']['cx_most_apka'] if molecule['molecule_properties'].get('cx_most_apka') else 0\n",
     "\n",
     "    \n",
     "molecule_props=get_molecules(chembl_ids)    \n",
     "\n",
     "\n",
-    "results = [(key, check_natural(value), check_analgesic(value), value['molecule_structures']['canonical_smiles']) for key,value in molecule_props.items()]\n",
+    "results = [(key, check_natural(value), check_analgesic(value), get_pka_acid(value), value['molecule_structures']['canonical_smiles']) for key,value in molecule_props.items()]\n",
     "\n",
-    "results_df = pd.DataFrame(results, columns=['CHEMBL_ID', 'Is_Natural_Product', 'Is_Anaglesic', 'Smiles'])\n",
+    "results_df = pd.DataFrame(results, columns=['CHEMBL_ID', 'Is_Natural_Product', 'Is_Anaglesic','pka_acid', 'Smiles'])\n",
     "results_df.to_csv('./data/natural_products3.csv', index=False)"
    ],
    "outputs": [],
-   "execution_count": 49
+   "execution_count": 114
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:49:25.913992Z",
-     "start_time": "2024-06-07T19:49:25.912743Z"
+     "end_time": "2024-06-08T19:03:07.194415Z",
+     "start_time": "2024-06-08T19:03:07.193363Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "4f9eed30c1ee28df",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 114
   }
  ],
  "metadata": {
