Replaced missing with mean

--- a/check_properties_chembl.ipynb
+++ b/check_properties_chembl.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-08T19:03:07.107405Z",
-     "start_time": "2024-06-08T19:03:07.104302Z"
+     "end_time": "2024-06-08T20:42:42.410330Z",
+     "start_time": "2024-06-08T20:42:42.407750Z"
     }
    },
    "cell_type": "code",
@@ -15,13 +15,13 @@
    ],
    "id": "fa8bb7a8d601629c",
    "outputs": [],
-   "execution_count": 112
+   "execution_count": 156
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-08T19:03:07.114502Z",
-     "start_time": "2024-06-08T19:03:07.110179Z"
+     "end_time": "2024-06-08T20:42:42.416582Z",
+     "start_time": "2024-06-08T20:42:42.412642Z"
     }
    },
    "cell_type": "code",
@@ -131,20 +131,20 @@
        " 'CHEMBL894']"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 113
+   "execution_count": 157
   },
   {
    "cell_type": "code",
    "id": "c9c0a382-a0cd-4c47-a3de-d1c2df906fac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-08T19:03:07.192800Z",
-     "start_time": "2024-06-08T19:03:07.115832Z"
+     "end_time": "2024-06-08T20:42:42.495974Z",
+     "start_time": "2024-06-08T20:42:42.417738Z"
     }
    },
    "source": [
@@ -171,7 +171,7 @@
     "    # structures=molecule['molecule_structures']\n",
     "    # print(structures)\n",
     "    # print(structures.get('cx_most_apka'))\n",
-    "    return molecule['molecule_properties']['cx_most_apka'] if molecule['molecule_properties'].get('cx_most_apka') else 0\n",
+    "    return molecule['molecule_properties']['cx_most_apka'] if molecule['molecule_properties'].get('cx_most_apka') else None\n",
     "\n",
     "    \n",
     "molecule_props=get_molecules(chembl_ids)    \n",
@@ -180,23 +180,197 @@
     "results = [(key, check_natural(value), check_analgesic(value), get_pka_acid(value), value['molecule_structures']['canonical_smiles']) for key,value in molecule_props.items()]\n",
     "\n",
     "results_df = pd.DataFrame(results, columns=['CHEMBL_ID', 'Is_Natural_Product', 'Is_Anaglesic','pka_acid', 'Smiles'])\n",
-    "results_df.to_csv('./data/natural_products3.csv', index=False)"
+    "\n",
+    "results_df['pka_acid'] = pd.to_numeric(results_df['pka_acid'], errors='coerce')\n",
+    "pka_acid_values=results_df['pka_acid'].copy().dropna()\n",
+    "results_df['pka_acid'].fillna(pka_acid_values.mean(), inplace=True)\n",
+    "results_df"
    ],
-   "outputs": [],
-   "execution_count": 114
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/h5/c1fg9pqx7rvd63glykqthsg40000gn/T/ipykernel_7083/2063240629.py:36: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  results_df['pka_acid'].fillna(pka_acid_values.mean(), inplace=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "       CHEMBL_ID  Is_Natural_Product  Is_Anaglesic   pka_acid  \\\n",
+       "0       CHEMBL70                   1             1  10.260000   \n",
+       "1      CHEMBL485                   1             1  13.780000   \n",
+       "2   CHEMBL364713                   1             0  13.070000   \n",
+       "3    CHEMBL19224                   1             0   8.917755   \n",
+       "4   CHEMBL459324                   1             0   8.917755   \n",
+       "..           ...                 ...           ...        ...   \n",
+       "82     CHEMBL809                   1             0   8.917755   \n",
+       "83     CHEMBL549                   1             0   8.917755   \n",
+       "84    CHEMBL1508                   1             0   8.917755   \n",
+       "85     CHEMBL637                   1             0   8.917755   \n",
+       "86     CHEMBL894                   1             0   8.917755   \n",
+       "\n",
+       "                                               Smiles  \n",
+       "0   CN1CC[C@]23c4c5ccc(O)c4O[C@H]2[C@@H](O)C=C[C@H...  \n",
+       "1   COc1ccc2c3c1O[C@H]1[C@@H](O)C=C[C@H]4[C@@H](C2...  \n",
+       "2   COc1ccc2c(c1OC)C(=O)O[C@@H]2[C@H]1c2c(cc3c(c2O...  \n",
+       "3               COc1ccc(Cc2nccc3cc(OC)c(OC)cc23)cc1OC  \n",
+       "4   CC(=O)Oc1ccc2c3c1O[C@H]1[C@@H](OC(C)=O)C=C[C@H...  \n",
+       "..                                                ...  \n",
+       "82        CN[C@H]1CC[C@@H](c2ccc(Cl)c(Cl)c2)c2ccccc21  \n",
+       "83            CN(C)CCCC1(c2ccc(F)cc2)OCc2cc(C#N)ccc21  \n",
+       "84        CN(C)CCC[C@@]1(c2ccc(F)cc2)OCc2cc(C#N)ccc21  \n",
+       "85                   COc1ccc(C(CN(C)C)C2(O)CCCCC2)cc1  \n",
+       "86                     CC(NC(C)(C)C)C(=O)c1cccc(Cl)c1  \n",
+       "\n",
+       "[87 rows x 5 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CHEMBL_ID</th>\n",
+       "      <th>Is_Natural_Product</th>\n",
+       "      <th>Is_Anaglesic</th>\n",
+       "      <th>pka_acid</th>\n",
+       "      <th>Smiles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CHEMBL70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.260000</td>\n",
+       "      <td>CN1CC[C@]23c4c5ccc(O)c4O[C@H]2[C@@H](O)C=C[C@H...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CHEMBL485</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13.780000</td>\n",
+       "      <td>COc1ccc2c3c1O[C@H]1[C@@H](O)C=C[C@H]4[C@@H](C2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CHEMBL364713</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13.070000</td>\n",
+       "      <td>COc1ccc2c(c1OC)C(=O)O[C@@H]2[C@H]1c2c(cc3c(c2O...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CHEMBL19224</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.917755</td>\n",
+       "      <td>COc1ccc(Cc2nccc3cc(OC)c(OC)cc23)cc1OC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CHEMBL459324</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.917755</td>\n",
+       "      <td>CC(=O)Oc1ccc2c3c1O[C@H]1[C@@H](OC(C)=O)C=C[C@H...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>CHEMBL809</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.917755</td>\n",
+       "      <td>CN[C@H]1CC[C@@H](c2ccc(Cl)c(Cl)c2)c2ccccc21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>CHEMBL549</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.917755</td>\n",
+       "      <td>CN(C)CCCC1(c2ccc(F)cc2)OCc2cc(C#N)ccc21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>CHEMBL1508</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.917755</td>\n",
+       "      <td>CN(C)CCC[C@@]1(c2ccc(F)cc2)OCc2cc(C#N)ccc21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>CHEMBL637</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.917755</td>\n",
+       "      <td>COc1ccc(C(CN(C)C)C2(O)CCCCC2)cc1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>CHEMBL894</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.917755</td>\n",
+       "      <td>CC(NC(C)(C)C)C(=O)c1cccc(Cl)c1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>87 rows × 5 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 158
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-08T19:03:07.194415Z",
-     "start_time": "2024-06-08T19:03:07.193363Z"
+     "end_time": "2024-06-08T20:42:42.500866Z",
+     "start_time": "2024-06-08T20:42:42.498722Z"
     }
    },
    "cell_type": "code",
-   "source": "",
-   "id": "4f9eed30c1ee28df",
+   "source": "results_df.to_csv('./data/natural_products3.csv', index=False)",
+   "id": "2db8db884638dac2",
    "outputs": [],
-   "execution_count": 114
+   "execution_count": 159
   }
  ],
  "metadata": {
