--- a/check_properties_chembl.ipynb
+++ b/check_properties_chembl.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-08T20:42:42.410330Z",
-     "start_time": "2024-06-08T20:42:42.407750Z"
+     "end_time": "2024-06-08T21:35:26.352351Z",
+     "start_time": "2024-06-08T21:35:26.350312Z"
     }
    },
    "cell_type": "code",
@@ -15,13 +15,13 @@
    ],
    "id": "fa8bb7a8d601629c",
    "outputs": [],
-   "execution_count": 156
+   "execution_count": 160
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-08T20:42:42.416582Z",
-     "start_time": "2024-06-08T20:42:42.412642Z"
+     "end_time": "2024-06-08T21:35:26.356225Z",
+     "start_time": "2024-06-08T21:35:26.354287Z"
     }
    },
    "cell_type": "code",
@@ -35,116 +35,16 @@
     "chembl_ids"
    ],
    "id": "ada103d47659d8aa",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['CHEMBL70',\n",
-       " 'CHEMBL485',\n",
-       " 'CHEMBL364713',\n",
-       " 'CHEMBL19224',\n",
-       " 'CHEMBL459324',\n",
-       " 'CHEMBL656',\n",
-       " 'CHEMBL1712170',\n",
-       " 'CHEMBL651',\n",
-       " 'CHEMBL1595',\n",
-       " 'CHEMBL1237044',\n",
-       " 'CHEMBL100116',\n",
-       " 'CHEMBL33986',\n",
-       " 'CHEMBL895',\n",
-       " 'CHEMBL592',\n",
-       " 'CHEMBL1201776',\n",
-       " 'CHEMBL607',\n",
-       " 'CHEMBL596',\n",
-       " 'CHEMBL658',\n",
-       " 'CHEMBL634',\n",
-       " 'CHEMBL1005',\n",
-       " 'CHEMBL841',\n",
-       " 'CHEMBL651',\n",
-       " 'CHEMBL511142',\n",
-       " 'CHEMBL656',\n",
-       " 'CHEMBL963',\n",
-       " 'CHEMBL398707',\n",
-       " 'CHEMBL19019',\n",
-       " 'CHEMBL80',\n",
-       " 'CHEMBL1213351',\n",
-       " 'CHEMBL1201294',\n",
-       " 'CHEMBL140050',\n",
-       " 'CHEMBL742',\n",
-       " 'CHEMBL299031',\n",
-       " 'CHEMBL5276190',\n",
-       " 'CHEMBL403893',\n",
-       " 'CHEMBL53',\n",
-       " 'CHEMBL133836',\n",
-       " 'CHEMBL112',\n",
-       " 'CHEMBL521',\n",
-       " 'CHEMBL25',\n",
-       " 'CHEMBL24',\n",
-       " 'CHEMBL12',\n",
-       " 'CHEMBL1064',\n",
-       " 'CHEMBL633',\n",
-       " 'CHEMBL529',\n",
-       " 'CHEMBL1464',\n",
-       " 'CHEMBL1431',\n",
-       " 'CHEMBL998',\n",
-       " 'CHEMBL1487',\n",
-       " 'CHEMBL1790041',\n",
-       " 'CHEMBL35',\n",
-       " 'CHEMBL384467',\n",
-       " 'CHEMBL1503',\n",
-       " 'CHEMBL1491',\n",
-       " 'CHEMBL1624',\n",
-       " 'CHEMBL8',\n",
-       " 'CHEMBL841',\n",
-       " 'CHEMBL472',\n",
-       " 'CHEMBL13',\n",
-       " 'CHEMBL532',\n",
-       " 'CHEMBL139',\n",
-       " 'CHEMBL1502',\n",
-       " 'CHEMBL253376',\n",
-       " 'CHEMBL157101',\n",
-       " 'CHEMBL1741',\n",
-       " 'CHEMBL1622',\n",
-       " 'CHEMBL625',\n",
-       " 'CHEMBL191',\n",
-       " 'CHEMBL714',\n",
-       " 'CHEMBL1560',\n",
-       " 'CHEMBL27',\n",
-       " 'CHEMBL190',\n",
-       " 'CHEMBL196',\n",
-       " 'CHEMBL547',\n",
-       " 'CHEMBL3833377',\n",
-       " 'CHEMBL12610',\n",
-       " 'CHEMBL896',\n",
-       " 'CHEMBL1705373',\n",
-       " 'CHEMBL471',\n",
-       " 'CHEMBL6966',\n",
-       " 'CHEMBL184',\n",
-       " 'CHEMBL46',\n",
-       " 'CHEMBL185',\n",
-       " 'CHEMBL192',\n",
-       " 'CHEMBL41',\n",
-       " 'CHEMBL809',\n",
-       " 'CHEMBL549',\n",
-       " 'CHEMBL1508',\n",
-       " 'CHEMBL637',\n",
-       " 'CHEMBL894']"
-      ]
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 157
+   "outputs": [],
+   "execution_count": 161
   },
   {
    "cell_type": "code",
    "id": "c9c0a382-a0cd-4c47-a3de-d1c2df906fac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-08T20:42:42.495974Z",
-     "start_time": "2024-06-08T20:42:42.417738Z"
+     "end_time": "2024-06-08T21:35:28.772670Z",
+     "start_time": "2024-06-08T21:35:26.357458Z"
     }
    },
    "source": [
@@ -203,33 +103,31 @@
     {
      "data": {
       "text/plain": [
-       "       CHEMBL_ID  Is_Natural_Product  Is_Anaglesic   pka_acid  \\\n",
-       "0       CHEMBL70                   1             1  10.260000   \n",
-       "1      CHEMBL485                   1             1  13.780000   \n",
-       "2   CHEMBL364713                   1             0  13.070000   \n",
-       "3    CHEMBL19224                   1             0   8.917755   \n",
-       "4   CHEMBL459324                   1             0   8.917755   \n",
-       "..           ...                 ...           ...        ...   \n",
-       "82     CHEMBL809                   1             0   8.917755   \n",
-       "83     CHEMBL549                   1             0   8.917755   \n",
-       "84    CHEMBL1508                   1             0   8.917755   \n",
-       "85     CHEMBL637                   1             0   8.917755   \n",
-       "86     CHEMBL894                   1             0   8.917755   \n",
+       "        CHEMBL_ID  Is_Natural_Product  Is_Anaglesic  pka_acid  \\\n",
+       "0       CHEMBL485                   1             1    13.780   \n",
+       "1        CHEMBL70                   1             1    10.260   \n",
+       "2       CHEMBL113                   1             0    10.754   \n",
+       "3         CHEMBL3                   1             0    10.754   \n",
+       "4    CHEMBL517712                   1             0    10.754   \n",
+       "5       CHEMBL170                   1             0    13.890   \n",
+       "6   CHEMBL4596781                   0             0    10.754   \n",
+       "7   CHEMBL4803817                   0             0     6.960   \n",
+       "8   CHEMBL4597035                   0             0    10.754   \n",
+       "9   CHEMBL5028438                   0             0     8.880   \n",
+       "10  CHEMBL5028232                   0             0    10.754   \n",
        "\n",
        "                                               Smiles  \n",
-       "0   CN1CC[C@]23c4c5ccc(O)c4O[C@H]2[C@@H](O)C=C[C@H...  \n",
-       "1   COc1ccc2c3c1O[C@H]1[C@@H](O)C=C[C@H]4[C@@H](C2...  \n",
-       "2   COc1ccc2c(c1OC)C(=O)O[C@@H]2[C@H]1c2c(cc3c(c2O...  \n",
-       "3               COc1ccc(Cc2nccc3cc(OC)c(OC)cc23)cc1OC  \n",
-       "4   CC(=O)Oc1ccc2c3c1O[C@H]1[C@@H](OC(C)=O)C=C[C@H...  \n",
-       "..                                                ...  \n",
-       "82        CN[C@H]1CC[C@@H](c2ccc(Cl)c(Cl)c2)c2ccccc21  \n",
-       "83            CN(C)CCCC1(c2ccc(F)cc2)OCc2cc(C#N)ccc21  \n",
-       "84        CN(C)CCC[C@@]1(c2ccc(F)cc2)OCc2cc(C#N)ccc21  \n",
-       "85                   COc1ccc(C(CN(C)C)C2(O)CCCCC2)cc1  \n",
-       "86                     CC(NC(C)(C)C)C(=O)c1cccc(Cl)c1  \n",
-       "\n",
-       "[87 rows x 5 columns]"
+       "0   COc1ccc2c3c1O[C@H]1[C@@H](O)C=C[C@H]4[C@@H](C2...  \n",
+       "1   CN1CC[C@]23c4c5ccc(O)c4O[C@H]2[C@@H](O)C=C[C@H...  \n",
+       "2                          Cn1c(=O)c2c(ncn2C)n(C)c1=O  \n",
+       "3                                CN1CCC[C@H]1c1cccnc1  \n",
+       "4    CN1[C@@H]2CC[C@H]1C[C@@H](OC(=O)C(CO)c1ccccc1)C2  \n",
+       "5   C=C[C@H]1CN2CC[C@H]1C[C@H]2[C@H](O)c1ccnc2ccc(...  \n",
+       "6           Clc1ccc(OCCCn2c3c(c4c(Cl)cccc42)CCNC3)cc1  \n",
+       "7   CCOc1cc2c(cc1OCCCN)-c1c(c(Nc3cccc(C(=O)CC)n3)n...  \n",
+       "8       CCCCCC/C=C/c1ccc(CO[C@H]2C[C@H](CO)N(C)C2)cc1  \n",
+       "9   Oc1cccc([C+](c2c[nH]c3ccccc23)c2c[nH]c3ccccc23)c1  \n",
+       "10  CCCCCCCCCC(C)C1OCc2c(C[N+](C)(C)CCCNC(=O)CCCCC...  "
       ],
       "text/html": [
        "<div>\n",
@@ -260,117 +158,116 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>CHEMBL70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10.260000</td>\n",
-       "      <td>CN1CC[C@]23c4c5ccc(O)c4O[C@H]2[C@@H](O)C=C[C@H...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>CHEMBL485</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>13.780000</td>\n",
+       "      <td>13.780</td>\n",
        "      <td>COc1ccc2c3c1O[C@H]1[C@@H](O)C=C[C@H]4[C@@H](C2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CHEMBL70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.260</td>\n",
+       "      <td>CN1CC[C@]23c4c5ccc(O)c4O[C@H]2[C@@H](O)C=C[C@H...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>CHEMBL364713</td>\n",
+       "      <td>CHEMBL113</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>13.070000</td>\n",
-       "      <td>COc1ccc2c(c1OC)C(=O)O[C@@H]2[C@H]1c2c(cc3c(c2O...</td>\n",
+       "      <td>10.754</td>\n",
+       "      <td>Cn1c(=O)c2c(ncn2C)n(C)c1=O</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>CHEMBL19224</td>\n",
+       "      <td>CHEMBL3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>8.917755</td>\n",
-       "      <td>COc1ccc(Cc2nccc3cc(OC)c(OC)cc23)cc1OC</td>\n",
+       "      <td>10.754</td>\n",
+       "      <td>CN1CCC[C@H]1c1cccnc1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>CHEMBL459324</td>\n",
+       "      <td>CHEMBL517712</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>8.917755</td>\n",
-       "      <td>CC(=O)Oc1ccc2c3c1O[C@H]1[C@@H](OC(C)=O)C=C[C@H...</td>\n",
+       "      <td>10.754</td>\n",
+       "      <td>CN1[C@@H]2CC[C@H]1C[C@@H](OC(=O)C(CO)c1ccccc1)C2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>CHEMBL809</td>\n",
+       "      <th>5</th>\n",
+       "      <td>CHEMBL170</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>8.917755</td>\n",
-       "      <td>CN[C@H]1CC[C@@H](c2ccc(Cl)c(Cl)c2)c2ccccc21</td>\n",
+       "      <td>13.890</td>\n",
+       "      <td>C=C[C@H]1CN2CC[C@H]1C[C@H]2[C@H](O)c1ccnc2ccc(...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>CHEMBL549</td>\n",
-       "      <td>1</td>\n",
+       "      <th>6</th>\n",
+       "      <td>CHEMBL4596781</td>\n",
        "      <td>0</td>\n",
-       "      <td>8.917755</td>\n",
-       "      <td>CN(C)CCCC1(c2ccc(F)cc2)OCc2cc(C#N)ccc21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.754</td>\n",
+       "      <td>Clc1ccc(OCCCn2c3c(c4c(Cl)cccc42)CCNC3)cc1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>CHEMBL1508</td>\n",
-       "      <td>1</td>\n",
+       "      <th>7</th>\n",
+       "      <td>CHEMBL4803817</td>\n",
        "      <td>0</td>\n",
-       "      <td>8.917755</td>\n",
-       "      <td>CN(C)CCC[C@@]1(c2ccc(F)cc2)OCc2cc(C#N)ccc21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.960</td>\n",
+       "      <td>CCOc1cc2c(cc1OCCCN)-c1c(c(Nc3cccc(C(=O)CC)n3)n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>CHEMBL637</td>\n",
-       "      <td>1</td>\n",
+       "      <th>8</th>\n",
+       "      <td>CHEMBL4597035</td>\n",
        "      <td>0</td>\n",
-       "      <td>8.917755</td>\n",
-       "      <td>COc1ccc(C(CN(C)C)C2(O)CCCCC2)cc1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.754</td>\n",
+       "      <td>CCCCCC/C=C/c1ccc(CO[C@H]2C[C@H](CO)N(C)C2)cc1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>CHEMBL894</td>\n",
-       "      <td>1</td>\n",
+       "      <th>9</th>\n",
+       "      <td>CHEMBL5028438</td>\n",
        "      <td>0</td>\n",
-       "      <td>8.917755</td>\n",
-       "      <td>CC(NC(C)(C)C)C(=O)c1cccc(Cl)c1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.880</td>\n",
+       "      <td>Oc1cccc([C+](c2c[nH]c3ccccc23)c2c[nH]c3ccccc23)c1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>CHEMBL5028232</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.754</td>\n",
+       "      <td>CCCCCCCCCC(C)C1OCc2c(C[N+](C)(C)CCCNC(=O)CCCCC...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>87 rows × 5 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 158
+   "execution_count": 162
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-08T20:42:42.500866Z",
-     "start_time": "2024-06-08T20:42:42.498722Z"
+     "end_time": "2024-06-08T21:35:28.787016Z",
+     "start_time": "2024-06-08T21:35:28.777238Z"
     }
    },
    "cell_type": "code",
    "source": "results_df.to_csv('./data/natural_products3.csv', index=False)",
    "id": "2db8db884638dac2",
    "outputs": [],
-   "execution_count": 159
+   "execution_count": 163
   }
  ],
  "metadata": {
